chore: fix whitespace error

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -11,7 +11,6 @@ body {
 }
 
 html {
-  min-height: 600px;
   /* Should be kept in line with the constant of width in the constants.js file */
   min-width: 360px;
 }
